--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
 <header class="navigation" role="banner">
     <div class="navigation-wrapper">
-        <a href="javascript:void(0)" class="logo">
+        <a href="#" class="logo">
 
         </a>
-        <a href="javascript:void(0)" class="navigation-menu-button" id="js-mobile-menu">MENU</a>
+
         <nav role="navigation">
             <button type="button" class="js-menu-trigger sliding-panel-button">
                 Click for Sliding Panel
@@ -36,11 +36,11 @@
                     </div>
                 </div>
                 <ul>
-                    <li><a href="javascript:void(0)">Item 1</a></li>
-                    <li><a href="javascript:void(0)">Item 2</a></li>
-                    <li><a href="javascript:void(0)">Item 3</a></li>
-                    <li><a href="javascript:void(0)">Item 4</a></li>
-                    <li><a href="javascript:void(0)">Item 5</a></li>
+                    <li><a href="#">Item 1</a></li>
+                    <li><a href="#">Item 2</a></li>
+                    <li><a href="#">Item 3</a></li>
+                    <li><a href="#">Item 4</a></li>
+                    <li><a href="#">Item 5</a></li>
                 </ul>
 
                 <hr/>
@@ -96,7 +96,6 @@
 
 <script src="https://maps.googleapis.com/maps/api/js"></script>
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
-<script src="js/refills-components.js"></script>
 <script src="js/js.js"></script>
 
 </body>
