--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
                 Click for Sliding Panel
             </button>
 
+            <button type="button" id="ajax-tester">
+                Ajax!
+            </button>
+
             <nav class="js-menu sliding-panel-content">
                 <div class="navigation-wrapper">
                     <div>
@@ -35,39 +39,28 @@
                         </div>
                     </div>
                 </div>
-                <ul>
-                    <li><a href="#">Item 1</a></li>
-                    <li><a href="#">Item 2</a></li>
-                    <li><a href="#">Item 3</a></li>
-                    <li><a href="#">Item 4</a></li>
-                    <li><a href="#">Item 5</a></li>
+                <ul id="bcn-list">
                 </ul>
 
                 <hr/>
 
                 <ul class="accordion-tabs-minimal">
                     <li class="tab-header-and-content">
-                        <a href="#" class="tab-link is-active">Tab Item</a>
-                        <div class="tab-content">
+                        <a href="#" class="tab-link is-active">Wikipedia</a>
+                        <div class="tab-content" id="wikipedia-tab">
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras tincidunt pellentesque lorem, id suscipit dolor rutrum id. Morbi facilisis porta volutpat. Fusce adipiscing, mauris quis congue tincidunt, sapien purus suscipit odio, quis dictum odio tortor in sem. Ut sit amet libero nec orci mattis fringilla. Praesent eu ipsum in sapien tincidunt molestie sed ut magna. Nam accumsan dui at orci rhoncus pharetra tincidunt elit ullamcorper. Sed ac mauris ipsum. Nullam imperdiet sapien id purus pretium id aliquam mi ullamcorper.</p>
                         </div>
                     </li>
                     <li class="tab-header-and-content">
-                        <a href="#" class="tab-link">Another Tab</a>
-                        <div class="tab-content">
+                        <a href="#" class="tab-link">Foursquare</a>
+                        <div class="tab-content" id="foursquare-tab">
                             <p>Ut laoreet augue et neque pretium non sagittis nibh pulvinar. Etiam ornare tincidunt orci quis ultrices. Pellentesque ac sapien ac purus gravida ullamcorper. Duis rhoncus sodales lacus, vitae adipiscing tellus pharetra sed. Praesent bibendum lacus quis metus condimentum ac accumsan orci vulputate. Aenean fringilla massa vitae metus facilisis congue. Morbi placerat eros ac sapien semper pulvinar. Vestibulum facilisis, ligula a molestie venenatis, metus justo ullamcorper ipsum, congue aliquet dolor tortor eu neque. Sed imperdiet, nibh ut vestibulum tempor, nibh dui volutpat lacus, vel gravida magna justo sit amet quam. Quisque tincidunt ligula at nisl imperdiet sagittis. Morbi rutrum tempor arcu, non ultrices sem semper a. Aliquam quis sem mi.</p>
                         </div>
                     </li>
                     <li class="tab-header-and-content">
-                        <a href="#" class="tab-link">Third</a>
-                        <div class="tab-content">
+                        <a href="#" class="tab-link">Hotwire</a>
+                        <div class="tab-content" id="hotwire-tab">
                             <p>Donec mattis mauris gravida metus laoreet non rutrum sem viverra. Aenean nibh libero, viverra vel vestibulum in, porttitor ut sapien. Phasellus tempor lorem id justo ornare tincidunt. Nulla faucibus, purus eu placerat fermentum, velit mi iaculis nunc, bibendum tincidunt ipsum justo eu mauris. Nulla facilisi. Vestibulum vel lectus ac purus tempus suscipit nec sit amet eros. Nullam fringilla, enim eu lobortis dapibus, quam magna tincidunt nibh, sit amet imperdiet dolor justo congue turpis.</p>
-                        </div>
-                    </li>
-                    <li class="tab-header-and-content">
-                        <a href="#" class="tab-link">Last Item</a>
-                        <div class="tab-content">
-                            <p>Sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Phasellus dui urna.</p>
                         </div>
                     </li>
                 </ul>
@@ -96,6 +89,7 @@
 
 <script src="https://maps.googleapis.com/maps/api/js"></script>
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
+<script src="bower_components/knockout/dist/knockout.js"></script>
 <script src="js/js.js"></script>
 
 </body>
