--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <div class="navigation-tools">
                         <div class="search-bar">
                             <form role="search">
-                                <input type="search" placeholder="Enter Search" />
+                                <input id="search-filter" type="search" placeholder="Enter Search" />
                                 <button type="submit">
                                     <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/search-icon.png" alt="Search Icon">
                                 </button>
