click events on markers and list register and create ajax calls to wikipedia

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <nav role="navigation">
             <button type="button" class="js-menu-trigger sliding-panel-button">
-                Click for Sliding Panel
+                Menu
             </button>
 
             <nav class="js-menu sliding-panel-content">
@@ -28,8 +28,6 @@
                         <div class="search-bar">
                             <form role="search">
                                 <input id="search-filter" class="controls" type="search" placeholder="Filter the list..."  data-bind="textInput: filterList" autocomplete="off"/>
-                                <p data-bind="text: filterList"></p>
-
                             </form>
                         </div>
                     </div>
@@ -37,7 +35,7 @@
 
                 <ul id="bcn-list" data-bind="template: {foreach: markersVisible}">
                     <li>
-                        <a data-bind="text: title, click: listClick" href="#"></a>
+                        <a data-bind="text: title, click: listClick, attr: { 'data-wiki': wiki }" href="#" class="filter-list-elements"></a>
                     </li>
                 </ul>
 
@@ -47,7 +45,7 @@
                     <li class="tab-header-and-content">
                         <a href="#" class="tab-link is-active">Wikipedia</a>
                         <div class="tab-content" id="wikipedia-tab">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras tincidunt pellentesque lorem, id suscipit dolor rutrum id. Morbi facilisis porta volutpat. Fusce adipiscing, mauris quis congue tincidunt, sapien purus suscipit odio, quis dictum odio tortor in sem. Ut sit amet libero nec orci mattis fringilla. Praesent eu ipsum in sapien tincidunt molestie sed ut magna. Nam accumsan dui at orci rhoncus pharetra tincidunt elit ullamcorper. Sed ac mauris ipsum. Nullam imperdiet sapien id purus pretium id aliquam mi ullamcorper.</p>
+
                         </div>
                     </li>
                     <li class="tab-header-and-content">
