--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Page Title</title>
+    <title>Nate's Barcelona Recommendations</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">
 </head>
@@ -10,19 +10,18 @@
 
 <header class="navigation" role="banner">
     <div class="navigation-wrapper">
-        <a href="#" class="logo">
 
-        </a>
+        <h1>Barcelona Recommendations</h1>
 
         <nav role="navigation">
             <button type="button" class="js-menu-trigger sliding-panel-button">
-                Menu
+                <span class="fa fa-align-justify"></span>
             </button>
 
             <nav class="js-menu sliding-panel-content">
                 <div class="navigation-wrapper">
                     <div>
-                        <h2>Information</h2>
+                        <h2>Click an item to find out more about it!</h2>
                     </div>
                     <div class="navigation-tools">
                         <div class="search-bar">
@@ -39,28 +38,9 @@
                     </li>
                 </ul>
 
-                <hr/>
 
-                <ul class="accordion-tabs-minimal">
-                    <li class="tab-header-and-content">
-                        <a href="#" class="tab-link is-active">Wikipedia</a>
-                        <div class="tab-content" id="wikipedia-tab">
 
-                        </div>
-                    </li>
-                    <li class="tab-header-and-content">
-                        <a href="#" class="tab-link">Foursquare</a>
-                        <div class="tab-content" id="foursquare-tab">
-                            <p>Ut laoreet augue et neque pretium non sagittis nibh pulvinar. Etiam ornare tincidunt orci quis ultrices. Pellentesque ac sapien ac purus gravida ullamcorper. Duis rhoncus sodales lacus, vitae adipiscing tellus pharetra sed. Praesent bibendum lacus quis metus condimentum ac accumsan orci vulputate. Aenean fringilla massa vitae metus facilisis congue. Morbi placerat eros ac sapien semper pulvinar. Vestibulum facilisis, ligula a molestie venenatis, metus justo ullamcorper ipsum, congue aliquet dolor tortor eu neque. Sed imperdiet, nibh ut vestibulum tempor, nibh dui volutpat lacus, vel gravida magna justo sit amet quam. Quisque tincidunt ligula at nisl imperdiet sagittis. Morbi rutrum tempor arcu, non ultrices sem semper a. Aliquam quis sem mi.</p>
-                        </div>
-                    </li>
-                    <li class="tab-header-and-content">
-                        <a href="#" class="tab-link">Hotwire</a>
-                        <div class="tab-content" id="hotwire-tab">
-                            <p>Donec mattis mauris gravida metus laoreet non rutrum sem viverra. Aenean nibh libero, viverra vel vestibulum in, porttitor ut sapien. Phasellus tempor lorem id justo ornare tincidunt. Nulla faucibus, purus eu placerat fermentum, velit mi iaculis nunc, bibendum tincidunt ipsum justo eu mauris. Nulla facilisi. Vestibulum vel lectus ac purus tempus suscipit nec sit amet eros. Nullam fringilla, enim eu lobortis dapibus, quam magna tincidunt nibh, sit amet imperdiet dolor justo congue turpis.</p>
-                        </div>
-                    </li>
-                </ul>
+
 
 
             </nav>
@@ -70,24 +50,48 @@
 
     </div>
 
+</header>
 
 
-    <!--
-    <script src="https://maps.googleapis.com/maps/api/js"></script>
-    <script>
-
-    </script>
-    -->
 
     <div id="map_canvas"></div>
 
-</header>
+    <div id="advertising">
+        <a href="http://www.parla.cat/" target="_blank">
+            <img src="img/parlacat.jpg" alt="Learn to speak Catalan!"/>
+        </a>
+    </div>
+
+    <div id="info-tabs-section">
+        <ul class="accordion-tabs-minimal">
+            <li class="tab-header-and-content">
+                <a href="#" class="tab-link is-active"><span class="fa fa-location-arrow"></span> What's Around Here</a>
+                <div class="tab-content" id="foursquare-tab">
+
+                </div>
+            </li>
+            <li class="tab-header-and-content">
+                <a href="#" class="tab-link"><span class="fa fa-info-circle"></span> More Info About This Area</a>
+                <div class="tab-content" id="wikipedia-tab">
+
+                </div>
+            </li>
+            <li class="tab-header-and-content">
+                <a href="#" class="tab-link"><span class="fa fa-bed"></span> Lodging Specials</a>
+                <div class="tab-content" id="hotwire-tab">
+                    <p>Hotwire information will go here, but isn't working yet.</p>
+                </div>
+            </li>
+        </ul>
+    </div>
+
+
 
 
 <script src="https://maps.googleapis.com/maps/api/js"></script>
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
 <script src="bower_components/knockout/dist/knockout.js"></script>
-<script src="js/js.js"></script>
+<script src="js.js"></script>
 
 </body>
 
