better error handling for Wiki and FS added.

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
 <script>
     var googleError = function() {
-        alert('google API not loading');
+        alert('Bummer... Looks like Google Maps is not loading. Please try again later.');
     };
     var googleSuccess = function() {
         ko.applyBindings(new ViewModel());
