--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name=viewport content="width=device-width, initial-scale=1">
     <title>Nate's Barcelona Recommendations</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="dist/styles/style.css">
     <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">
 </head>
 <body>
@@ -81,11 +81,10 @@
     </ul>
 </div>
 
-<script src="bower_components/knockout/dist/knockout.js"></script>
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
-<script src="js/js.min.js"></script>
+<script src="bower_components/knockout/dist/knockout.js"></script>
+<script src="dist/js/js.min.js"></script>
 <script async src="https://maps.googleapis.com/maps/api/js?callback=googleSuccess" onerror="googleError()"></script>
-
 
 </body>
 
