--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
                     <div class="navigation-tools">
                         <div class="search-bar">
                             <form role="search">
-                                <input id="search-filter" class="controls" type="search" placeholder="Filter the list..."  data-bind="textInput: filterList" autocomplete="off"/>
+                                <input id="search-filter" class="controls" type="search"
+                                       placeholder="Filter the list..." data-bind="textInput: filterList"
+                                       autocomplete="off"/>
                             </form>
                         </div>
                     </div>
@@ -35,7 +37,8 @@
 
                 <ul id="bcn-list" data-bind="template: {foreach: markersVisible}">
                     <li>
-                        <a data-bind="text: title, click: listClick, attr: { 'data-wiki': wiki }" href="#" class="filter-list-elements"></a>
+                        <a data-bind="text: title, click: listClick, attr: { 'data-wiki': wiki }" href="#"
+                           class="filter-list-elements"></a>
                     </li>
                 </ul>
 
@@ -47,7 +50,6 @@
     </div>
 
 </header>
-
 
 
 <div id="map_canvas"></div>
@@ -62,14 +64,22 @@
     <ul class="accordion-tabs-minimal">
         <li class="tab-header-and-content">
             <a href="#" class="tab-link is-active"><span class="fa fa-location-arrow"></span> What's Around Here</a>
-            <div data-bind="text: foursquareContent" class="tab-content" id="foursquare-tab">
+            <div class="tab-content" id="foursquare-tab">
+                <div class="foursquare-item">
+                    <img data-bind="attr: { src: fsphotoURL }" alt=""/>
+                    <h3 data-bind="text: fstitle"></h3>
+                    <p data-bind="text: fscontent"></p>
+                    <a data-bind="attr: { href: fsurl }" target="_blank">Read more on FourSquare...</a>
+                </div>
 
             </div>
         </li>
         <li class="tab-header-and-content">
             <a href="#" class="tab-link"><span class="fa fa-info-circle"></span> More Info About This Area</a>
             <div class="tab-content" id="wikipedia-tab">
-
+                <h3 data-bind="text: wikiTitle"></h3>
+                <p data-bind="text: wikiContent"></p>
+                <a data-bind="attr: { href: wikiLink }">Read more on Wikipedia...</a>
             </div>
         </li>
         <li class="tab-header-and-content">
