foursquare observables fixed

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <div class="tab-content" id="wikipedia-tab">
                 <h3 data-bind="text: wikiTitle"></h3>
                 <p data-bind="text: wikiContent"></p>
-                <a data-bind="attr: { href: wikiLink }">Read more on Wikipedia...</a>
+                <a data-bind="attr: { href: wikiLink }" target="_blank">Read more on Wikipedia...</a>
             </div>
         </li>
         <li class="tab-header-and-content">
